# TabularMagic

./: .env_template  .gitignore  .readthedocs.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  pytest.ini  remove_pycache.py  requirements.txt  scratch.py  setup.py  setup_tm.py  test.py  tm-build.py  tm-install.py  tm-uninstall.py  tmbuild.py
.dev_notes/: package_dependencies.md
.github/workflows/: test.yml
archive/: clean_package_directory.py
contributing/archive/: 062424.md
demo/: regression_demo.ipynb  regression_start_to_finish_demo.ipynb  simple_regression_demo.ipynb  test.ipynb  test2.ipynb  test_diabetes.ipynb
demo/causal/: woolridge_card.ipynb
demo/classification/: breast_cancer.ipynb  iris.ipynb  titanic.ipynb
demo/regression/: diabetes.ipynb  house_prices.ipynb  mtcars.ipynb  test_pipeline.joblib
dev_notes/: notes.md  package_dependencies.md  todo.md
dev_utils/: clean_package_directory.py
docs/: analyzer.rst  conf.py  index.rst  intro.rst  tabularmagic.rst
docs/getting_started/: intro.rst
docs/python_api/: api_reference.rst
docs/tutorial/: tutorial.rst
src/: tabularmagic.py
src/metrics/: __init__.py  regression_scoring.py
src/models/: __init__.py
src/preprocessing/: datapreprocessor.py
tablemage/: __init__.py
tablemage/_base/: __init__.py
tablemage/_reports/: __init__.py
tablemage/_src/: __init__.py  analyzer.py
tablemage/agents/: __init__.py
tablemage/mage/: __init__.py  requirements.txt
tablemage/ml/: __init__.py
tabularmagic/: __init__.py  requirements.txt  tabularmagic.py
tabularmagic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tabularmagic/_reports/: __init__.py
tabularmagic/_src/: __init__.py  analyzer.py  tabularmagic.py
tabularmagic/api/: __init__.py
tabularmagic/feature_selection/: __init__.py  regression_feature_selection.py
tabularmagic/fs/: __init__.py
tabularmagic/interactive/: __init__.py  eda.py  feature_selection.py  linreg.py  mlreg.py  regression.py  report.py  visualization.py
tabularmagic/linear/: __init__.py
tabularmagic/linear_models/: __init__.py
tabularmagic/metrics/: __init__.py  distribution_estimation.py  regression_scoring.py
tabularmagic/ml/: __init__.py  base_model.py
tabularmagic/ml_models/: __init__.py  base_model.py
tabularmagic/models/: base_model.py
tabularmagic/options/: __init__.py
tabularmagic/preprocessing/: __init__.py  datapreprocessor.py  regression_feature_selection.py
tabularmagic/src/: tabularmagic.py
tabularmagic/topython/: pyequivtracker.py
tabularmagic/util/: color_text.py  console.py
tabularmagic/visualization/: __init__.py  (+2 more)
tabularmagic_agentic/: __init__.py  requirements.txt
tabularmagic_llm/: README.md
tabularwizard/: .env_template  README.md  requirements.txt
todo/: 062424.md
(+519 files in other folders)
