[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "tabularmagic"
version = "0.1.0a1"
description = "A Python package for low-code analysis of tabular data"
authors = [
    {name = "Andrew Yang", email = "andrew_j_yang@brown.edu"},
    {name = "Ryan Zhang", email = "rzryanz00@gmail.com"},
    {name = "Joshua Woo", email = "joshua_woo@brown.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.2.2",
    "scipy>=1.1.3",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "xgboost>=2.0.3",
    "statsmodels>=0.14.0",
    "adjustText>=1.1.1",
    "optuna>=3.6.1",
    "optuna-integration>=3.6.0"
]
license = {file = "LICENSE"}
keywords = ["data science", "low-code", "statistics", "machine learning"]
classifiers = [
    "Programming Language :: Python"
]


[project.optional-dependencies]
wizard = [
    "tabularwizard",
    "langchain>=0.2.6",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "pydantic>=2.8.2",
    "python-dotenv>=0.21.0"
]


[project.urls]
Homepage = "https://tabularmagic.readthedocs.io/"



[tool.hatch.metadata]
packages = [
    {include = "tabularmagic"},
    {include = "tabularwizard"}
]
